add recent watched functionality add aop logging in controllers via advice